--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -18,7 +18,7 @@
     {{ standard_header_includes }}
 
     {{ require_js("https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js", "head") }}
-    {{ require_js("https://cdn.jsdelivr.net/combine/npm/gsap@3.6.1,npm/gsap@3.6.1/dist/CSSRulePlugin.min.js,npm/gsap@3.6.1/dist/ScrollTrigger.min.js,npm/gsap@3.6.1/dist/ScrollToPlugin.min.js", "head") }}
+    {{ require_js("https://cdn.jsdelivr.net/combine/npm/gsap@3.6.1,npm/gsap@3.6.1/dist/CSSRulePlugin.min.js,npm/gsap@3.6.1/dist/ScrollTrigger.min.js,npm/gsap@3.6.1/dist/ScrollToPlugin.min.js,npm/gsap@3.6.1/dist/TextPlugin.min.js", "head") }}
 
   </head>
   <body>
