--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="span4">
-        <a class="footer__text" href="#">
+        {# <a class="footer__text" href="#">
         Why Riptide
         </a>
         <a class="footer__text" href="#">
@@ -19,7 +19,7 @@
         </a>
         <a class="footer__text" href="#">
         About Us
-        </a>
+        </a> #}
       </div>
       <div class="span4">
         <div class="footer__text" href="#">
@@ -55,6 +55,12 @@
             </a>
           </div>
           <div class="span4">
+            <a class="footer__social" href="#">
+              <img src="https://f.hubspotusercontent10.net/hubfs/9346563/Social/twitter.svg" alt="Twitter">
+            </a>
+            <a class="footer__social" href="#">
+              <img src="https://f.hubspotusercontent10.net/hubfs/9346563/Social/linkedin.svg" alt="Linkedin">
+            </a>
           </div>
         </div>
       </div>
