--- a/src/css/components/_footer.css
+++ b/src/css/components/_footer.css
@@ -26,6 +26,14 @@
     font-weight:500;
 }
 
+.footer__social{
+    margin-right:40px;
+}
+
+.footer__social img{
+    height:23px;
+}
+
 @media(max-width: 767px) {
     .footer .span4{
         margin-top:40px;
@@ -41,7 +49,15 @@
         padding:18px 0;
     }
 
+    .footer__social{
+        margin: 0 15px;
+    }
+
     .footer__bottom .span4{
         margin-top:0;
+    }
+
+    .footer__bottom .span4:last-of-type{
+        margin:10px 0;
     }
 }
