--- a/src/css/fallback.css
+++ b/src/css/fallback.css
@@ -103,6 +103,9 @@ blockquote {
   border-left-color: #F8FAFC;
 }
 
+#main-content{
+  overflow: hidden;
+}
 /*****************************************/
 /*************** Buttons *****************/
 /*****************************************/
