--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -20,9 +20,7 @@
 
     {# Header navigation column #}
 
-    <div class="header__column">
-      <a class="header__contact shallow-button">Talk to Riptide</a>
-      <a class="header__signin link">Sign In</a>
-    </div>
+    {% module 'header_links' path='../../modules/header-links' %}
+    
   </div>
 </header>
