--- a/src/css/theme-overrides.css
+++ b/src/css/theme-overrides.css
@@ -218,7 +218,7 @@ h6 {
 
 @media screen and (max-width: 1180px) {
   h1{
-    font-size: 32px;
+    font-size: 28px;
   }
   
   h2{
@@ -243,6 +243,11 @@ blockquote {
 {###########################################################################}
 {############################   4. Buttons   ###############################}
 {###########################################################################}
+
+.body-wrapper{
+  overflow-x: hidden;
+  width: 100%;
+}
 
 button,
 .button {
