--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -97,6 +97,7 @@
 
     {# Benefits Section #}
     {% dnd_section
+    class='mobile-white'
     background_color='#F6F6F6',
     %}
       {% dnd_module
