--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -10,16 +10,7 @@
           {% module "linked_image" path="@hubspot/linked_image" %}
         </div>
       </div>
-      <div class="span4">
-        {# <a class="footer__text" href="#">
-        Why Riptide
-        </a>
-        <a class="footer__text" href="#">
-        How it Works
-        </a>
-        <a class="footer__text" href="#">
-        About Us
-        </a> #}
+      <div class="span4 d-mobile-none">
       </div>
       <div class="span4">
         <div class="footer__text" href="#">
