--- a/src/modules/stepper-new.module/module.css
+++ b/src/modules/stepper-new.module/module.css
@@ -62,7 +62,17 @@ section.stepper-new{
 }
 
 @media screen and (max-width: 767px) {
+  section.stepper-new{
+    margin-top:50px;
+  }
+
   .stepper-new__steps{
      background-color:transparent;
+     margin-top: 0;
+     padding-top: 30px;
+  }
+
+  .stepper-new__step-text{
+    margin:0 auto 20px;
   }
 }
