--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -14,12 +14,12 @@
       {{ require_css(get_asset_url(template_css)) }}
     {% endif %}
     {{ require_css(get_asset_url("../../css/theme-overrides.css")) }}
+    {{ require_css("https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.css")}}
     {# To see a full list of what is included via standard_header_includes please reference this article: https://developers.hubspot.com/docs/cms/hubl/variables#required-page-template-variables #}
     {{ standard_header_includes }}
 
-    {{ require_js("https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js", "head") }}
     {{ require_js("https://cdn.jsdelivr.net/combine/npm/gsap@3.6.1,npm/gsap@3.6.1/dist/CSSRulePlugin.min.js,npm/gsap@3.6.1/dist/ScrollTrigger.min.js,npm/gsap@3.6.1/dist/ScrollToPlugin.min.js,npm/gsap@3.6.1/dist/TextPlugin.min.js", "head") }}
-
+    {{ require_js("https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.js")}}
   </head>
   <body>
     <div class="body-wrapper {{ builtin_body_classes }}">
