footer contact update

--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -13,15 +13,7 @@
       <div class="span4 d-mobile-none">
       </div>
       <div class="span4">
-        <div class="footer__text" href="#">
-        Contact Sales:
-        </div>
-        <a class="footer__link" href="mailto:hello@riptidehq.com">
-        hello@riptidehq.com
-        </a>
-        <a class="footer__link" href="tel:888-435-6324">
-        +1 888-RIP-TIDE <span>(888-435-6324)</span>
-        </a>
+        {% module 'footer_contact' path='../../modules/footer-contact' %}
       </div>
     </div>
   </div>
